--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   dio: ^5.8.0+1
   shimmer: ^3.0.0
   permission_handler: ^12.0.1
+  animate_do: ^4.2.0
 
 dev_dependencies:
   flutter_test:
