--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   firebase_core: ^4.0.0
+  flutter_slidable: ^4.0.0
   intl: ^0.20.2
   rxdart: ^0.28.0
   firebase_auth: ^6.0.0
