--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,8 @@ dependencies:
   shimmer: ^3.0.0
   permission_handler: ^12.0.1
   animate_do: ^4.2.0
+  cloudinary_api: ^1.1.1
+  cloudinary_url_gen: ^1.8.0
 
 dev_dependencies:
   flutter_test:
