--- a/.github/workflows/flutter_build_auto.yml
+++ b/.github/workflows/flutter_build_auto.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      # 🟢 استخرج نسخة Flutter من pubspec.lock أو pubspec.yaml
+      # 🟢 استخرج نسخة Flutter
       - name: Detect Flutter version
         id: flutter_version
         run: |
@@ -30,7 +30,6 @@ jobs:
           echo "Detected Flutter version: $VERSION"
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
-      # 🟢 نزّل نسخة Flutter اللي اتكشفت
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -39,13 +38,11 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-      # 🟢 Build Split APKs
       - name: Build Split APKs
         run: flutter build apk --release --split-per-abi
 
-      # 🟢 Upload جميع الـ APKs
       - name: Upload Split APKs
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: split-apks
           path: build/app/outputs/flutter-apk/*.apk
