--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   cupertino_icons: ^1.0.8
+  app_links: ^6.4.1
+  share_plus: ^12.0.0
   firebase_core: ^4.0.0
   flutter_slidable: ^4.0.0
   intl: ^0.20.2
