--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -31,6 +31,11 @@
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UISupportedInterfaceOrientations</key>
+	<key>NSLocationWhenInUseUsageDescription</key>
+    <string>We need your location to show nearby places.</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>We need your location to show nearby places.</string>
+
 	<key>FlutterDeepLinkingEnabled</key>
     <true/>
 	<array>
