--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,8 @@ dependencies:
   cloudinary_url_gen: ^1.8.0
   image_cropper: ^9.1.0
   google_maps_flutter: ^2.13.1
+  geolocator: ^13.0.1
+  geocoding: ^3.0.0
 
 dev_dependencies:
   flutter_test:
