--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   app_links: ^6.4.1
   share_plus: ^12.0.0
+  flutter_map: ^8.2.2
   googleapis_auth: ^1.4.0
   firebase_core: ^4.0.0
   flutter_slidable: ^4.0.0
@@ -71,8 +72,9 @@ dependencies:
   cloudinary_url_gen: ^1.8.0
   image_cropper: ^9.1.0
   google_maps_flutter: ^2.13.1
-  geolocator: ^13.0.1
-  geocoding: ^3.0.0
+  geolocator: ^14.0.2
+  geocoding: ^4.0.0
+  latlong2: ^0.9.1
 
 dev_dependencies:
   flutter_test:
