--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   flutter_localizations:
     sdk: flutter
+  firebase_remote_config: ^6.1.0
   cupertino_icons: ^1.0.8
   app_links: ^6.4.1
   share_plus: ^12.0.0
